# splatbelt

./: .gitignore  .gitmodules  .prettierignore  231122-meeting-notes.excalidraw  NOTES.md  README.md  cdk.context.json  package-lock.json  package.json  postgrest.conf  sst.config.ts
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  init-db.sql  post-create.sh  requirements.txt
.devcontainer/library-scripts/: common-debian.sh  install-brev-cli.sh  install-diff-so-fancy.sh  install-docker.sh
.github/workflows/: ci.yml  (+8 more)
admin/: +layout.svelte
app/: .env  .eslintrc.cjs  .gitignore  .prettierrc  package-lock.json  package.json  playwright.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.js
data/: hydrate.sh  model_conf.json  models.json  uploads.json
db/: clear-db.sh  reload-postgrest-schema-cache.sh  run-tests.sh  schema.sql
stacks/: app.ts  auth.ts  backend.ts  preSignUp.js
tasks/: .env  deploy-key  deploy-key.pub  launch.sh  run-pending.sh  run.sh  s3.sh  setup.sh
worker/: .dockerignore  .gitignore  Dockerfile.dagster  Dockerfile.gs-cuda  Dockerfile.gs-inria  Dockerfile.worker  README.md  config.yaml  dagster.yaml  docker-compose.yaml  execute-job.sh  launch-job.sh  pyproject.toml  requirements.txt  workspace.yaml
worker/tests/: test_s3.py
worker/worker/: __init__.py  analyse.py  config.py  detect_volume.py  postgres.py  project_partition.py  utils.py  video.py
worker/worker/s3/: __init__.py  asset.py  file_io_manager.py  file_resource.py  zip_index.py  zip_resource.py
(+238 files in other folders)
