[project]
description = ""
name = "nerfbelt-worker"
requires-python = ">=3.10"
version = "1.0.0"

dependencies = [
  "dagster ~= 1.4.15",
  "dagster-aws ~= 0.20.15",
  "dagster-docker ~= 0.20.15",
  "dagster-shell ~= 0.20.15",
  "dagster-postgres ~= 0.20.15",
  "postgres ~= 4.0",
  "numpy ~= 1.26.0",
  "opencv-python ~= 4.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "moto",
]

[tool.setuptools]
packages = ["worker"]

[tool.dagster]
module_name = "worker"
